--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -11,8 +11,11 @@
       <ul class="navigation-list">
         {{ with .Site.Menus.main}}
           {{ range sort . }}
+            {{ $menuURL := index (apply (slice .URL) (.Params.urlFunc | default "relLangURL") ".") 0 }}
+            {{ $pageURL := $.RelPermalink }}
+            {{ $active := or (eq $pageURL $menuURL) (eq $pageURL (printf "%s/" (strings.TrimSuffix "/" $menuURL))) (eq (strings.TrimSuffix "/" $pageURL) (strings.TrimSuffix "/" $menuURL)) }}
             <li class="navigation-item">
-              <a class="navigation-link {{ .Params.class }}" href="{{ index (apply (slice .URL) (.Params.urlFunc | default "relLangURL") ".") 0 }}">{{ .Name }}</a>
+              <a class="navigation-link {{ .Params.class }}{{ if $active }} active{{ end }}" href="{{ $menuURL }}">{{ .Name }}</a>
             </li>
           {{ end }}
         {{ end }}
